fix: add testing and fix workflows

--- a/src/connectors/connector_cloudscheduler.workflows.yaml
+++ b/src/connectors/connector_cloudscheduler.workflows.yaml
@@ -24,7 +24,7 @@
       - project_id: ${sys.get_env("GOOGLE_CLOUD_PROJECT_ID")}
       - location_id: "us-central1"
       - job_id: "dummy-job-id"
-      - topic_id: "dummy-topic-id"  # Pubsub topic used by Cloud Scheduler as a notification target.
+      - topic: "dummy-topic-id"  # Pubsub topic used by Cloud Scheduler as a notification target.
       - subscription: "dummy-subscription-id"
 - create_topic:
     call: googleapis.pubsub.v1.projects.topics.create
