--- a/src/connectors/connector_secretmanager.workflows.yaml
+++ b/src/connectors/connector_secretmanager.workflows.yaml
@@ -46,7 +46,7 @@
     call: googleapis.secretmanager.v1.projects.secrets.versions.access
     args:
       name: ${"projects/" + project_id + "/secrets/" + secret_id + "/versions/" + version}
-    result: base64_encoded_secret_data
+    result: base64_encoded_secret
 # Secret can also be retrieved by using positional arguments in an expression.
 - expression:
     assign:
