--- a/.github/workflows/e2e_main_test.yaml
+++ b/.github/workflows/e2e_main_test.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Check out repo
       uses: actions/checkout@v3
 
-    - name: Get files
+    - name: Get source files
       uses: actions/github-script@v6
       id: get-files
       with:
@@ -50,11 +50,10 @@ jobs:
     - id: Authenticate
       uses: 'google-github-actions/auth@v0'
       with:
-        workload_identity_provider: 'projects/784176979884/locations/global/workloadIdentityPools/gha-pool/providers/gh-provider'
-        service_account: 'workload-id-fed@friction-finder.iam.gserviceaccount.com'
+        workload_identity_provider: ''
+        service_account: ''
         create_credentials_file: true
         
-
     - name: Set up Cloud SDK
       uses: 'google-github-actions/setup-gcloud@v0'
 
